5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1637_2703.log
== TEST (2019-04-07 12:59:04) 
-- CODE:
idade = int(input("Informe sua idade: "))
if (idade >= 18)
	print("eleitor")
else:
	print("nao_eleitor")
-- ERROR:
File "XXXX", line 2
    if (idade >= 18)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 12:59:10) 
-- CODE:
idade = int(input("Informe sua idade: "))
if (idade >= 18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 12:59:15) 
-- CODE:
idade = int(input("Informe sua idade: "))
if (idade >= 18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 12:59:19) 
-- CODE:
idade = int(input("Informe sua idade: "))
if (idade >= 18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 12:59:25) 
-- CODE:
idade = int(input("Informe sua idade: "))
if (idade >= 18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.170165
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
